--- a/page.css
+++ b/page.css
@@ -18,7 +18,7 @@ body, html {
     flex-shrink: 0;
     display: flex;
     flex-direction: column;
-    background-image: url('/images/bg1.jpeg');
+    background-image: url('./images/bg1.jpeg');
     background-size: cover; 
     background-position: center; 
 }
